Add support for Cabrollo format log file #7

--- a/qsomap/templates/main.html
+++ b/qsomap/templates/main.html
@@ -74,8 +74,9 @@
                                    required>
                         </div>
                         <div class="mb-3">
-                            <label for="file" class="form-label">Choose Log File (ADIF/ADI)</label>
-                            <input type="file" class="form-control" id="file" name="file" accept=".adif,.adi" required>
+                            <label for="file" class="form-label">Choose Log File (ADIF or Cabrillo)</label>
+                            <input type="file" class="form-control" id="file" name="file" accept=".adif,.adi,.cbr,.log,.cabrillo,.cab" required>
+                            <div class="form-text">Supported formats: ADIF (.adif, .adi) and Cabrillo (.cbr, .log, .cabrillo)</div>
                         </div>
                         <button type="submit" class="btn btn-primary">Show map</button>
                     </form>
